# CMakeExamples

./: README.md
example1/: CMakeLists.txt  helloworld.cpp
example2/: CMakeLists.txt  build.sh
example2/src/hello/: CMakeLists.txt  hello.cpp
example3/: CMakeLists.txt  build.sh
example3/example/: CMakeLists.txt  main.cpp
example3/src/shared/: CMakeLists.txt
example3/src/shared/include/: shared.h
example3/src/shared/src/: shared.cpp
example3/src/static/: CMakeLists.txt
example3/src/static/include/: static.h
example3/src/static/src/: static.cpp
