CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/example MAIN_SRC)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/shared/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/static/include")
LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/lib")
ADD_EXECUTABLE(hello ${MAIN_SRC})
TARGET_LINK_LIBRARIES(hello libshared.so)
TARGET_LINK_LIBRARIES(hello libstatic.a)
